feat: rich endpoints
